--- a/app/src/main/res/layout/activity_dry_details.xml
+++ b/app/src/main/res/layout/activity_dry_details.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.ola.dryclean.Activites.DryDetailsActivity">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,8 +12,7 @@
     android:layout_width="match_parent"
     android:padding="5dp"
     android:layoutDirection="rtl"
-    android:layout_height="match_parent"
-    tools:context="com.example.ola.dryclean.Activites.DryDetailsActivity">
+    android:layout_height="match_parent">
 
     <!--<android.support.v7.widget.Toolbar-->
         <!--android:id="@+id/toolbar"-->
@@ -140,6 +144,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="ساعة"
+                            android:id="@+id/hours"
                             android:textSize="15dp"
                             android:layout_weight="1"/>
 
@@ -177,7 +182,7 @@
                             android:layout_height="wrap_content"
                             android:text="فلس"
                             android:textSize="15dp"
-
+                            android:id="@+id/fils"
                             android:layout_weight="1"/>
                     </LinearLayout>
                     <TextView
@@ -212,7 +217,7 @@
                             android:layout_height="wrap_content"
                             android:text="دينار"
                             android:textSize="15dp"
-
+                            android:id="@+id/dinaar"
                             android:layout_weight="1"/>
                     </LinearLayout>
                     <TextView
@@ -303,3 +308,4 @@
 
 
 </LinearLayout>
+</ScrollView>
