--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -45,7 +45,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="هل تريد غسيل ملابسك؟"
+        android:text="هل تريد غسيل ملابسك ؟"
         android:layout_gravity="center"
         android:gravity="center"
         android:id="@+id/text1"
@@ -60,24 +60,21 @@
         android:gravity="right"
         android:layout_gravity="center"
         android:layoutDirection="ltr"
-
-        android:background="#E6E7E8"
+        android:background="@drawable/first_area"
         android:weightSum="5"
         android:orientation="horizontal">
 
-        <Button
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="232dp"
             android:layout_height="50dp"
             android:textSize="20dp"
             android:background="#E6E7E8"
-
             android:id="@+id/location_txt"
-            android:layout_gravity="center"
-            android:gravity="center"
+            android:layout_gravity="start"
+            android:gravity="center_vertical"
             android:textColor="@color/colorPrimary"
-            android:textAlignment="center"
             android:text="السالمية"
-            android:layout_weight="3.76" />
+            android:paddingLeft="5dp" />
 
 
         <Button
@@ -98,16 +95,16 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-
         android:id="@+id/menu_btn"
         android:text="قائمة المصابغ"
-        android:textSize="30dp"
-        android:textColor="@color/white"
-        android:background="@color/colorPrimary"/>
+        android:textSize="20dp"
+        android:background="@drawable/firstbtn"
+        android:textColor="@color/white" />
 
-    <LinearLayout android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center_horizontal">
+    <!--<LinearLayout -->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent"-->
+        <!--android:gravity="center_horizontal">-->
 
         <!--<Button-->
         <!--android:layout_width="wrap_content"-->
@@ -119,6 +116,6 @@
         <!--android:layout_gravity="center_vertical"-->
         <!--android:textColor="@color/colorPrimary"-->
         <!--android:background="@color/gray"/>-->
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 </LinearLayout>
