--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -1,3 +1,9 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:headerLayout="@layout/nav_header_main"
+    app:menu="@menu/activity_main_drawer">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -5,8 +11,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/white"
-    app:headerLayout="@layout/nav_header_main"
-    app:menu="@menu/activity_main_drawer"
+
     tools:context="com.example.ola.dryclean.Fragments.MyAccountFragment">
 
 
@@ -114,3 +119,4 @@
 
 
 </LinearLayout>
+</ScrollView>
